--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "dev:ssr": "ng run espinozah-site:serve-ssr",
+    "serve:ssr": "node dist/espinozah-site/server/main.js",
+    "build:ssr": "ng build && ng run espinozah-site:server",
+    "prerender": "ng run espinozah-site:prerender"
   },
   "private": true,
   "dependencies": {
@@ -18,7 +22,10 @@
     "@angular/forms": "~13.0.3",
     "@angular/platform-browser": "~13.0.3",
     "@angular/platform-browser-dynamic": "~13.0.3",
+    "@angular/platform-server": "~13.0.3",
     "@angular/router": "~13.0.3",
+    "@nguniversal/express-engine": "13.0.1",
+    "express": "^4.15.2",
     "normalize.css": "^8.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
@@ -33,6 +40,8 @@
     "@angular-eslint/template-parser": "12.7.0",
     "@angular/cli": "~13.0.4",
     "@angular/compiler-cli": "~13.0.3",
+    "@nguniversal/builders": "^13.0.1",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "4.28.2",
