--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "espinozah-site": {
+    "espinozah": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -20,7 +20,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/espinozah-site/browser",
+            "outputPath": "dist/espinozah/browser",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -68,10 +68,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "espinozah-site:build:production"
+              "browserTarget": "espinozah:build:production"
             },
             "development": {
-              "browserTarget": "espinozah-site:build:development"
+              "browserTarget": "espinozah:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -79,7 +79,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "espinozah-site:build"
+            "browserTarget": "espinozah:build"
           }
         },
         "test": {
@@ -104,7 +104,7 @@
         "server": {
           "builder": "@angular-devkit/build-angular:server",
           "options": {
-            "outputPath": "dist/espinozah-site/server",
+            "outputPath": "dist/espinozah/server",
             "main": "server.ts",
             "tsConfig": "tsconfig.server.json",
             "inlineStyleLanguage": "scss"
@@ -131,12 +131,12 @@
           "builder": "@nguniversal/builders:ssr-dev-server",
           "configurations": {
             "development": {
-              "browserTarget": "espinozah-site:build:development",
-              "serverTarget": "espinozah-site:server:development"
+              "browserTarget": "espinozah:build:development",
+              "serverTarget": "espinozah:server:development"
             },
             "production": {
-              "browserTarget": "espinozah-site:build:production",
-              "serverTarget": "espinozah-site:server:production"
+              "browserTarget": "espinozah:build:production",
+              "serverTarget": "espinozah:server:production"
             }
           },
           "defaultConfiguration": "development"
@@ -144,18 +144,16 @@
         "prerender": {
           "builder": "@nguniversal/builders:prerender",
           "options": {
-            "routes": [
-              "/"
-            ]
+            "routes": ["/"]
           },
           "configurations": {
             "production": {
-              "browserTarget": "espinozah-site:build:production",
-              "serverTarget": "espinozah-site:server:production"
+              "browserTarget": "espinozah:build:production",
+              "serverTarget": "espinozah:server:production"
             },
             "development": {
-              "browserTarget": "espinozah-site:build:development",
-              "serverTarget": "espinozah-site:server:development"
+              "browserTarget": "espinozah:build:development",
+              "serverTarget": "espinozah:server:development"
             }
           },
           "defaultConfiguration": "production"
@@ -163,7 +161,7 @@
       }
     }
   },
-  "defaultProject": "espinozah-site",
+  "defaultProject": "espinozah",
   "cli": {
     "defaultCollection": "@angular-eslint/schematics"
   }
