--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/common": "~13.0.3",
     "@angular/compiler": "~13.0.3",
     "@angular/core": "~13.0.3",
+    "@angular/fire": "7.2.0",
     "@angular/forms": "~13.0.3",
     "@angular/platform-browser": "~13.0.3",
     "@angular/platform-browser-dynamic": "~13.0.3",
@@ -26,7 +27,9 @@
     "@angular/router": "~13.0.3",
     "@nguniversal/express-engine": "13.0.1",
     "express": "^4.15.2",
+    "firebase": "^9.4.0",
     "normalize.css": "^8.0.1",
+    "rxfire": "^6.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -53,6 +56,8 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.4.4"
+    "typescript": "~4.4.4",
+    "firebase-admin": "^9.11.1",
+    "firebase-functions": "^3.6.0"
   }
 }
