add: se agrego angular analitics

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /dist
 /tmp
 /out-tsc
+.angular
 # Only exists if Bazel was run
 /bazel-out
 
@@ -49,3 +50,4 @@ Thumbs.db
 .firebase
 *-debug.log
 .runtimeconfig.json
+
