update: se paso la logica de analitycs a un service

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     "paths": {
       "@admin/*": ["app/admin/*"],
       "@public/*": ["app/public/*"],
+      "@shared/*": ["app/shared/*"],
       "@env/*": ["environments/*"]
     }
   },
