--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nguniversal/express-engine": "13.0.1",
     "express": "^4.15.2",
     "firebase": "^9.4.0",
+    "ngx-logger": "^5.0.4",
     "normalize.css": "^8.0.1",
     "rxfire": "^6.0.0",
     "rxjs": "~6.6.0",
@@ -50,14 +51,14 @@
     "@typescript-eslint/eslint-plugin": "4.28.2",
     "@typescript-eslint/parser": "4.28.2",
     "eslint": "^7.26.0",
+    "firebase-admin": "^9.11.1",
+    "firebase-functions": "^3.6.0",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.4.4",
-    "firebase-admin": "^9.11.1",
-    "firebase-functions": "^3.6.0"
+    "typescript": "~4.4.4"
   }
 }
